--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img width="150" src="/images/Rick.jpg" alt="Rick"></td>
+      <td><img width="150" src="./images/Rick.jpg" alt="Rick"></td>
 
       <td>
         <h1>Octavio Alcober</h1>
